<resources>
    <string name="app_name">MultilanguageForm</string>
    <string-array name="daftarNegara">
        <item>Indonesia</item>
        <item>Singapore</item>
        <item>Malaysia</item>
        <item>Philippines</item>
        <item>Australia</item>
    </string-array>
    <string name="lokasi">Location</string>
    <string name="jalan">Street</string>
    <string name="kodePos">Zip Code</string>
    <string name="negara">Country</string>
    <string name="pemakai">User</string>
    <string name="nama">Name</string>
    <string name="telp">Telephone</string>
    <string name="sand">Password</string>
    <string name="tglLahir">Birth Date</string>
    <string name="ulang">Reset</string>
    <string name="simpan">Save</string>
</resources>